srv/salt/files/sys/iptables
# Generated by iptables-save v1.4.7 on Wed Nov 11 15:55:21 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [26732:2662024]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 115.29.173.218/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 54.223.210.142/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 54.223.210.142/32 -p tcp -m state --state NEW -m tcp --dport 10050 -j ACCEPT
-A INPUT -s 192.168.253.0/24 -j ACCEPT 
-A INPUT -s 218.241.129.62/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Wed Nov 11 15:55:21 2015
